--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "cSpell.words": ["Correctanswers", "dayclick"]
+  "cSpell.words": ["ciphertext", "Correctanswers", "dayclick"]
 }
