--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@nuxt/image-edge": "^1.0.0-27809804.194d2d6",
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "@types/crypto-js": "^4.1.1",
     "nuxt": "3.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13"
@@ -17,6 +18,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.12",
     "@vueuse/nuxt": "^9.5.0",
+    "crypto-js": "^4.1.1",
     "moment": "^2.29.4",
     "v-calendar": "^3.0.0-alpha.8"
   }
