--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/image-edge": "^1.0.0-27809804.194d2d6",
-    "@nuxtjs/tailwindcss": "^6.1.3",
-    "@types/crypto-js": "^4.1.1",
-    "nuxt": "3.0.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13"
+    "@nuxt/image-edge": "^1.3.0-28493895.369b747",
+    "@nuxtjs/color-mode": "3.5.2",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@types/crypto-js": "^4.2.2",
+    "nuxt": "3.17.5",
+    "prettier": "^3.6.0",
+    "prettier-plugin-tailwindcss": "^0.6.13"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.0.12",
-    "@vercel/analytics": "^0.1.5",
-    "@vueuse/nuxt": "^9.5.0",
-    "crypto-js": "^4.1.1",
-    "moment": "^2.29.4",
+    "@heroicons/vue": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vueuse/nuxt": "^13.4.0",
+    "crypto-js": "^4.2.0",
+    "moment": "^2.30.1",
     "v-calendar": "^3.0.0-alpha.8",
     "vue-social-sharing": "^4.0.0-alpha4"
   }
